--- a/STM32PROJECT.ioc
+++ b/STM32PROJECT.ioc
@@ -13,16 +13,21 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=TIM1
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin1=PA7
+Mcu.Pin2=PA8
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=PB6
+Mcu.Pin6=PB7
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin9=VP_TIM1_VS_ClockSourceITR
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -43,6 +48,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA7.Mode=Output Compare1 CH1 CH1N
+PA7.Signal=TIM1_CH1N
+PA8.Signal=S_TIM1_CH1
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -83,7 +91,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -103,7 +111,17 @@ RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=64000000
 RCC.USBFreq_Value=64000000
+SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1 CH1N
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-Output\ Compare1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.DeadTime=2
+TIM1.IPParameters=Channel-Output Compare1 CH1 CH1N,AutoReloadPreload,DeadTime
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
 board=custom
 isbadioc=false
