--- a/STM32PROJECT.ioc
+++ b/STM32PROJECT.ioc
@@ -9,7 +9,7 @@ Dma.I2C1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.0.Mode=DMA_NORMAL
 Dma.I2C1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.I2C1_TX.0.Priority=DMA_PRIORITY_HIGH
 Dma.I2C1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=I2C1_TX
 Dma.RequestsNb=1
@@ -37,22 +37,23 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PB10
 Mcu.Pin4=PB11
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA9
-Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -83,6 +84,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=GYRO_SDA
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=Encoder_Input
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=IPS_SCK
 PB13.Mode=Full_Duplex_Master
@@ -109,7 +114,8 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=OLED_SDA
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC13-TAMPER-RTC.GPIOParameters=PinState
+PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=SysWork_Light
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.PinState=GPIO_PIN_RESET
 PC13-TAMPER-RTC.Signal=GPIO_Output
@@ -186,10 +192,10 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
 TIM1.Period=2000-1
 TIM1.Prescaler=720-1
-TIM3.IC1Filter=10
-TIM3.IC2Filter=10
+TIM3.IC1Filter=0
+TIM3.IC2Filter=0
 TIM3.IPParameters=IC1Filter,IC2Filter,Period
-TIM3.Period=100
+TIM3.Period=40-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
