二级菜单初步

--- a/STM32PROJECT.ioc
+++ b/STM32PROJECT.ioc
@@ -84,8 +84,9 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=GYRO_SDA
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=Encoder_Input
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Input
 PB13.GPIOParameters=GPIO_Label
@@ -195,7 +196,7 @@ TIM1.Prescaler=720-1
 TIM3.IC1Filter=0
 TIM3.IC2Filter=0
 TIM3.IPParameters=IC1Filter,IC2Filter,Period
-TIM3.Period=40-1
+TIM3.Period=65535
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
