--- a/STM32PROJECT.ioc
+++ b/STM32PROJECT.ioc
@@ -28,32 +28,28 @@ Mcu.IP1=I2C1
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IPNb=9
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB4
-Mcu.Pin13=PB5
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PB5
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PB10
 Mcu.Pin4=PB11
 Mcu.Pin5=PB12
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA9
-Mcu.PinsNb=18
+Mcu.Pin6=PA9
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB4
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -89,18 +85,6 @@ PB12.GPIO_Label=Encoder_Input
 PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Input
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=IPS_SCK
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=IPS_MISO
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=IPS_MOSI
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=Encoder_CH1
 PB4.Signal=S_TIM3_CH1
@@ -156,7 +140,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -184,11 +168,6 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.CalculateBaudRate=18.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
 TIM1.Period=2000-1
