等待flash和switch到货

--- a/STM32PROJECT.ioc
+++ b/STM32PROJECT.ioc
@@ -18,16 +18,14 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.DutyCycle=I2C_DUTYCYCLE_2
 I2C1.I2C_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Mode,DutyCycle
-I2C2.I2C_Mode=I2C_Fast
-I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM3
@@ -36,20 +34,22 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB4
+Mcu.Pin12=PB5
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PB10
-Mcu.Pin4=PB11
-Mcu.Pin5=PB12
-Mcu.Pin6=PA9
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB4
-Mcu.PinsNb=15
+Mcu.Pin3=PB11
+Mcu.Pin4=PB12
+Mcu.Pin5=PB13
+Mcu.Pin6=PB14
+Mcu.Pin7=PB15
+Mcu.Pin8=PA9
+Mcu.Pin9=PA13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -72,19 +72,27 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Signal=S_TIM1_CH2
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=GYRO_SCL
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=GYRO_SDA
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
+PB11.GPIO_Label=Switch_Input
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=Encoder_Input
 PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=Flash_SCK
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=Flash_MISO
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=Flash_MOSI
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=Encoder_CH1
 PB4.Signal=S_TIM3_CH1
@@ -168,6 +176,11 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
 TIM1.Period=2000-1
